--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -13,12 +14,15 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-hls-player": "^3.0.7",
     "react-icons": "^4.9.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
